# simpleportal

./: .gitignore  Makefile.am  Makefile.in  README.md  build.sh  configure  configure.ac  fakeApi.js  package.json  process.json  server.js
client/: app.js  router.js
client/models/: cms.js  feature.js  featureLabel.js  features.js  me.js  pageContext.js
client/pages/: base.js  contact.js  features.js  home.js
client/views/: errors.js  feature.js  featureLabel.js  main.js
config/: default.json
stylesheets/: cover.css
stylesheets/app/: main.styl
templates/: body.pug  head.jade  head.pug  portalbody.pug
templates/includes/: feature.pug  featureLabel.pug
templates/pages/: contact.pug  features.pug  home.pug
